# aws-pyspark

./: .buildinfo  .gitignore  README.md  docexample.html  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  workflow.yml
.github/workflows/: codeql.yml  workflow.yml
_sources/: docexample.md.txt
_static/: documentation_options.js
docs/source/: conf.py  index.md
docs/source/notebooks/: tutorial.ipynb
src/: testdocs.py
